# ExampleMultiPortPlugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  generate_test_data.sh
Plugin/: CMakeLists.txt  paraview.plugin
Plugin/Reader/: CMakeLists.txt  ExampleMultiPortReader.xml  vtk.module  vtkExampleMultiPortReader.cxx  vtkExampleMultiPortReader.h
